[package]
name = "country-currency-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql", "chrono","migrate"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "gzip"] }
dotenvy = "0.15"
thiserror = "1"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
image = "0.25"
imageproc = "0.24"
ab_glyph = "0.2"
tower-http = { version = "0.5", features = ["trace", "cors"] }
anyhow = "1"

[dev-dependencies]
wiremock = "=0.5.22"
testcontainers = "0.15"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
tower = "0.4"
tempfile = "3"
serial_test = "3"

